--- a/docs/style.css
+++ b/docs/style.css
@@ -131,6 +131,7 @@ body {
     .chat-container {
         height: 100%;
         border-radius: 0;
+        padding: 40px;
     }
 
     .chat-header {
