--- a/docs/style.css
+++ b/docs/style.css
@@ -132,7 +132,7 @@ body {
     .chat-container {
         height: 100%;
         border-radius: 0;
-        padding: 40px;
+        padding: 20px;
     }
 
     .chat-header {
@@ -151,6 +151,7 @@ body {
 
     .chat-input {
         padding: 15px;
+        margin-bottom: 30px;
     }
 
     .chat-input input {
