--- a/docs/style.css
+++ b/docs/style.css
@@ -3,7 +3,7 @@
     --secondary-color: #34495E;
     --accent-color: #3498DB;
     --text-color: #ECF0F1;
-    --background-color: #1A1A1A;
+    --background-color: black;
 }
 
 body {
@@ -151,7 +151,7 @@ body {
 
     .chat-input {
         padding: 15px;
-        margin-bottom: 30px;
+        margin-bottom: 70px;
     }
 
     .chat-input input {
